--- a/sonar/docker-compose.yml
+++ b/sonar/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
 
   sonarqube:
-    image: sonarqube
+    image: sonarqube:7.9-community
     container_name: sonarqube
     networks:
       - sonarqube
