--- a/sonar/docker-compose.yml
+++ b/sonar/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
+      - sonarqube_lib:/opt/sonarqube/lib
     ulimits:
       nofile:
        soft: 65536
@@ -42,5 +43,6 @@ volumes:
   sonarqube_conf:
   sonarqube_data:
   sonarqube_extensions:
+  sonarqube_lib:  
   postgresql:
   postgresql_data:
